einstellung_derive/src/trybuild_tests/validate_missing_reference.stderr
error[E0308]: mismatched types
 --> src/trybuild_tests/validate_missing_reference.rs
  |
  | #[derive(Config)]
  |          ^^^^^^ expected `u16`, found `&u16`
  | struct ServerConfig {
  |     #[config(validate = validate_port)]
  |                         ------------- arguments to this function are incorrect
  |
note: function defined here
 --> src/trybuild_tests/validate_missing_reference.rs
  |
  | pub fn validate_port(_: u16) -> Result<(), Box<dyn std::error::Error>> {
  |        ^^^^^^^^^^^^^ ------
  = note: this error originates in the derive macro `Config` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider using clone here
  |
7 | #[derive(Config.clone())]
  |                ++++++++
